--- a/src/assets/styles/sections/featured-collection.scss
+++ b/src/assets/styles/sections/featured-collection.scss
@@ -1,19 +1,59 @@
+.featured-collection-wrapper {
+  display: grid;
+  grid-template-columns: 20px 1fr 20px;
+  max-width: 100%;
+}
+
 .featured-collection {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: $grid-max-width;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-column-gap: 2px;
+  grid-row-gap: 2px;
+  max-width: 100%;
+  text-align: center;
+
+  .caption {
+    color: white;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-top: 30px;
+    padding-bottom: 40px;
+    font-family: "TotentanzBackslanted";
+
+    p {
+      font-size: 22px;
+      margin-bottom: 0;
+    }
+
+    .price-list {
+      font-size: 35px;
+    }
+
+    .product-title-separator {
+      display: block;
+      padding: 5px 0;
+    }
+  }
 }
 
 .featured-collection-item {
-  flex: 1 1 percentage(1 / 3);
-  height: 100%;
-  text-align: center;
+  position: relative;
 }
 
-.featured-collection__image {
-  min-width: 320px;
+.featured-collection-item:hover {
+  .caption {
+    background: rgba(255, 255, 255, 0.8);
+    color: black;
+    -webkit-transition: all 400ms ease-in-out;
+    -ms-transition: all 400ms ease-in-out;
+    transition: all 400ms ease-in-out;
+  }
 }
 
-.featured-collection__title {
-  flex-basis: 100%;
+/* MEDIA QUERIES */
+@media only screen and (min-width: 768px) {
+  .featured-collection-wrapper {
+    grid-template-columns: 117px 1fr 117px;
+  }
 }
