--- a/src/sections/featured-product.liquid
+++ b/src/sections/featured-product.liquid
@@ -7,126 +7,158 @@
   {%- assign onboarding_title = 'homepage.onboarding.product_title' | t -%}
 {% endif %}
 
-<div data-section-id="{{ section.id }}" data-section-type="product" itemscope itemtype="http://schema.org/Product">
-  <meta itemprop="name" content="{{ product.title }}">
-  <meta itemprop="url" content="{{ shop.url }}{{ product.url }}">
-  <meta itemprop="image" content="{{ featured_image | img_url: '800x' }}">
-  <meta itemprop="description" content="{{ product.description | strip_html | escape }}">
+<div class="featured-product-wrapper "> 
+  <div class="sidebar left-sidebar"></div>
+    <section class="featured-product" data-section-id="{{ section.id }}" data-section-type="product" itemscope itemtype="http://schema.org/Product">
+      <meta itemprop="name" content="{{ product.title }}">
+      <meta itemprop="url" content="{{ shop.url }}{{ product.url }}">
+      <meta itemprop="image" content="{{ featured_image | img_url: '800x' }}">
+      <meta itemprop="description" content="{{ product.description | strip_html | escape }}">
 
-  {% if featured_image.src != blank %}
-    {% include 'responsive-image' with
-      image: featured_image,
-      max_width: 700,
-      max_height: 800
-    %}
-  {% endif %}
+      {% if featured_image.src != blank %}
+      <a href="{{ product.url }}">
+        <img src="{{ featured_image.src | img_url: '900x' }}" alt="{{ image.alt | escape }}">
+      </a>
+      {% endif %}
 
-  {% if product.images.size > 1 %}
-    <ul>
-      {% for image in product.images %}
-        <li>
-          <a href="{{ image.src | img_url: '480x480' }}" data-product-single-thumbnail>
-            <img src="{{ image.src | img_url: '160x160' }}" alt="{{ image.alt | escape }}">
-          </a>
-        </li>
-      {% endfor %}
-    </ul>
-  {% endif %}
 
-  <h1>{{ product.title | default: onboarding_title }}</h1>
-  {% if product.vendor != blank %}
-    <p>{{ product.vendor }}</p>
-  {% endif %}
-
-  <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-    <meta itemprop="priceCurrency" content="{{ shop.currency }}">
-    <meta itemprop="price" content="{{ product.price | divided_by: 100.00 }}">
-    <link itemprop="availability" href="http://schema.org/{% if product.available %}InStock{% else %}OutOfStock{% endif %}">
-
-    <form action="/cart/add" method="post" enctype="multipart/form-data">
-      {% unless product.has_only_default_variant %}
-        {% for option in product.options_with_values %}
-          <div class="selector-wrapper js">
-            <label for="SingleOptionSelector-{{ section.id }}-{{ forloop.index0 }}">
-              {{ option.name }}
-            </label>
-
-            <select
-              id="SingleOptionSelector-{{ section.id }}-{{ forloop.index0 }}"
-              data-single-option-selector
-              data-index="option{{ option.position }}">
-              {% for value in option.values %}
-                <option
-                  value="{{ value | escape }}"
-                  {% if option.selected_value == value %}selected="selected"{% endif %}>
-                    {{ value }}
-                </option>
-              {% endfor %}
-            </select>
-          </div>
-        {% endfor %}
-      {% endunless %}
-
-      <select name="id" class="no-js" data-product-select>
-        {% for variant in product.variants %}
-          <option
-            {% if variant == product.selected_or_first_available_variant %}selected="selected"{% endif %}
-            {% unless variant.available %}disabled="disabled"{% endunless %}
-            value="{{ variant.id }}">
-              {{ variant.title }}
-          </option>
-        {% endfor %}
-      </select>
-
-      <label for="Quantity-{{ section.id }}">{{ 'products.product.quantity' | t }}</label>
-      <input type="number" id="Quantity-{{ section.id }}" name="quantity" value="1" min="1">
-
-      <div data-price-wrapper>
-        <span data-product-price>
-          {{ current_variant.price | default: '1999' | money }}
-        </span>
-
-        {% if product.compare_at_price_max > product.price %}
-          <span class="visually-hidden" data-compare-text>{{ 'products.product.regular_price' | t }}</span>
-          <s data-compare-price>
-            {% if current_variant.compare_at_price > current_variant.price %}
-              {{ current_variant.compare_at_price | money }}
-            {% endif %}
-          </s>
-        {% endif %}
-      </div>
-
-      <button
-        type="submit"
-        name="add"
-        data-add-to-cart
-        {% unless product.available %}disabled="disabled"{% endunless %}
-        {% if section_onboarding %}disabled="disabled"{% endif %}>
-          <span data-add-to-cart-text>
-            {% if product.available %}
-              {{ 'products.product.add_to_cart' | t }}
+      {% if product.images.size > 1 %}
+        {% for image in product.images limit:1 offset:1 %}
+         <a href="{{ product.url }}">
+          {% include 'responsive-image' with
+            image: image,
+            max_width: 900,
+            max_height: 900
+          %}
+           
+          <div class="caption-featured-product">
+            <p>{{ product.title | escape }}</p>
+            <span class="product-title-separator">——————————</span>
+            <span class="price-list">
+          {% if product.compare_at_price > product.price %}
+            {% if product.price_varies %}
+              {%- assign sale_price = product.price | money_with_currency -%}
+              {{ 'products.product.on_sale_from_html' | t: price: sale_price }}
             {% else %}
-              {{ 'products.product.sold_out' | t }}
+              {{ 'products.product.on_sale' | t }}
+              {{ product.price | money_with_currency }}
             {% endif %}
-          </span>
-      </button>
-    </form>
+          {% else %}
+            {% if product.price_varies %}
+              {%- assign price = product.price | money_with_currency -%}
+              {{ 'products.product.from_text_html' | t: price: price }}
+            {% else %}
+              {{ product.price | money_with_currency }}
+            {% endif %}
+          {% endif %}
+        </span>
+          </div>
+          </a>
+        {% endfor %}
+      {% endif %}
 
-  </div>
+    
+      {%- comment -%}
+      {% if product.vendor != blank %}
+        <p>{{ product.vendor }}</p>
+      {% endif %}
+      {%- endcomment -%}
 
-  <div class="rte">
-    {{ product.description }}
-  </div>
+    {%- comment -%}
+      <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+        <meta itemprop="priceCurrency" content="{{ shop.currency }}">
+        <meta itemprop="price" content="{{ product.price | divided_by: 100.00 }}">
+        <link itemprop="availability" href="http://schema.org/{% if product.available %}InStock{% else %}OutOfStock{% endif %}">
 
-  {% if section.settings.show_share_buttons %}
-    {% include 'social-sharing', share_title: product.title, share_permalink: product.url, share_image: product %}
-  {% endif %}
+        <form action="/cart/add" method="post" enctype="multipart/form-data">
+          {% unless product.has_only_default_variant %}
+            {% for option in product.options_with_values %}
+              <div class="selector-wrapper js">
+                <label for="SingleOptionSelector-{{ section.id }}-{{ forloop.index0 }}">
+                  {{ option.name }}
+                </label>
 
-  {% unless product == empty %}
-    <script type="application/json" data-product-json>
-      {{ product | json }}
-    </script>
-  {% endunless %}
+                <select
+                  id="SingleOptionSelector-{{ section.id }}-{{ forloop.index0 }}"
+                  data-single-option-selector
+                  data-index="option{{ option.position }}">
+                  {% for value in option.values %}
+                    <option
+                      value="{{ value | escape }}"
+                      {% if option.selected_value == value %}selected="selected"{% endif %}>
+                        {{ value }}
+                    </option>
+                  {% endfor %}
+                </select>
+              </div>
+            {% endfor %}
+          {% endunless %}
+
+          <select name="id" class="no-js" data-product-select>
+            {% for variant in product.variants %}
+              <option
+                {% if variant == product.selected_or_first_available_variant %}selected="selected"{% endif %}
+                {% unless variant.available %}disabled="disabled"{% endunless %}
+                value="{{ variant.id }}">
+                  {{ variant.title }}
+              </option>
+            {% endfor %}
+          </select>
+
+          <label for="Quantity-{{ section.id }}">{{ 'products.product.quantity' | t }}</label>
+          <input type="number" id="Quantity-{{ section.id }}" name="quantity" value="1" min="1">
+
+          <div data-price-wrapper>
+            <span data-product-price>
+              {{ current_variant.price | default: '1999' | money }}
+            </span>
+
+            {% if product.compare_at_price_max > product.price %}
+              <span class="visually-hidden" data-compare-text>{{ 'products.product.regular_price' | t }}</span>
+              <s data-compare-price>
+                {% if current_variant.compare_at_price > current_variant.price %}
+                  {{ current_variant.compare_at_price | money }}
+                {% endif %}
+              </s>
+            {% endif %}
+          </div>
+
+          <button
+            type="submit"
+            name="add"
+            data-add-to-cart
+            {% unless product.available %}disabled="disabled"{% endunless %}
+            {% if section_onboarding %}disabled="disabled"{% endif %}>
+              <span data-add-to-cart-text>
+                {% if product.available %}
+                  {{ 'products.product.add_to_cart' | t }}
+                {% else %}
+                  {{ 'products.product.sold_out' | t }}
+                {% endif %}
+              </span>
+          </button>
+        </form>
+        
+      </div>
+    {%- endcomment -%}
+
+      {%- comment -%}
+      <div class="rte">
+        {{ product.description }}
+      </div>
+      {%- endcomment -%}
+
+      {% if section.settings.show_share_buttons %}
+        {% include 'social-sharing', share_title: product.title, share_permalink: product.url, share_image: product %}
+      {% endif %}
+
+      {% unless product == empty %}
+        <script type="application/json" data-product-json>
+          {{ product | json }}
+        </script>
+      {% endunless %}
+    </section>
+  <div class="sidebar right-sidebar"></div>
 </div>
 
 {% schema %}
