Images duo section added

--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -34,6 +34,7 @@
 @import "./sections/featured-collection";
 @import "./sections/featured-product";
 @import "./sections/image-with-text";
+@import "./sections/images-duo";
 
 // Templates
 @import "./templates/gift_card";
