Setup header and navigation for desktop

--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -35,6 +35,7 @@
 @import "./sections/featured-product";
 @import "./sections/image-with-text";
 @import "./sections/images-duo";
+@import "./sections/header";
 
 // Templates
 @import "./templates/gift_card";
