--- a/src/sections/duo-images.liquid
+++ b/src/sections/duo-images.liquid
@@ -24,13 +24,13 @@
       <div class="svg-background">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 682 1023">
           <defs>
-            <style>.cls-1{fill:#ffa2df;}.cls-2{fill:#eaf76b;}</style>
+            <style>.cls-1{fill:#ffa2df;}.yellow{fill:#eaf76b;}</style>
           </defs>
           <title>background</title>
           <g id="Layer_2" data-name="Layer 2">
             <g id="IMAGES_PRODUITS" data-name="IMAGES PRODUITS">
               <polygon class="cls-1" points="170.5 895.5 623.17 1023 682 1023 682 0 0 0 0 285.4 170.5 895.5"/>
-              <path class="cls-2" d="M682,867c-64.81-77.11-140.3-45.42-208.39-107C389.86,684.24,498.05,551.65,338,377.14,234.77,264.57,0,294.38,0,294.38V1023H682Z"/>
+              <path class="yellow" d="M682,867c-64.81-77.11-140.3-45.42-208.39-107C389.86,684.24,498.05,551.65,338,377.14,234.77,264.57,0,294.38,0,294.38V1023H682Z"/>
             </g>
           </g>
         </svg>
