--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -36,6 +36,7 @@
 @import "./sections/image-with-text";
 @import "./sections/images-duo";
 @import "./sections/header";
+@import "./sections/footer";
 
 // Templates
 @import "./templates/gift_card";
