setup desktop product page

--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -37,6 +37,7 @@
 @import "./sections/images-duo";
 @import "./sections/header";
 @import "./sections/footer";
+@import "./sections/product";
 
 // Templates
 @import "./templates/gift_card";
