--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -148,7 +148,8 @@
           </li>
         {% else %}
           <li>
-            <a href="{{ link.url }}"> {{ link.title | prepend: " | " | append: ' '}} </a>
+           <span class="nav-separator">|</span>
+            <a href="{{ link.url }}"> {{ link.title}} </a>
           </li>
         {% endif %}
       {% endfor %}
