small css adjustments

--- a/src/assets/styles/sections/footer.scss
+++ b/src/assets/styles/sections/footer.scss
@@ -74,6 +74,7 @@
   padding-left: 25px;
   height: 50px;
   border: 1px solid black;
+  text-transform: uppercase;
 
   small {
     display: block;
