add cart item count

--- a/src/templates/cart.liquid
+++ b/src/templates/cart.liquid
@@ -1,129 +1,133 @@
-{% if cart.item_count > 0 %}
 <div class="cart-wrapper "> 
   <div class="sidebar left-sidebar"></div>
+    <div class="cart-container">
+     <div class="sidebar inner-left-sidebar"></div>
+        <div class="cart-inner-container">
+      {% if cart.item_count > 0 %}
 
-  <div class="cart-container">
-    <div class="sidebar inner-left-sidebar"></div>
-
-    <div class="cart-inner-container">
-    <h1 class="title-cart">{{ 'cart.general.title' | t }}</h1>
-
-    <form action="/cart" method="post" novalidate>
-        {%-comment-%}
-        <thead class="small--hide">
-          <tr>
-            <th colspan="2">{{ 'cart.label.product' | t }}</th>
-            <th>{{ 'cart.label.price' | t }}</th>
-            <th>{{ 'cart.label.quantity' | t }}</th>
-            <th>{{ 'cart.label.total' | t }}</th>
-          </tr>
-        </thead>
-        {%-endcomment-%}
-
-          {% for item in cart.items %}
-
-          {% comment %}
-
-          Cart Item Template
-          =====================
-          The data-label attributes on <td> elements are mobile-friendly
-          helpers used for responsive-table labels
-          {% endcomment %}
-
-        <div class="product-infos">
-
-          {% if item.image != blank %}
-            <a class="product-picture-cart" href="{{ item.url | within: collections.all }}">
-              {{ item | img_url: '300x' | img_tag: item.title }}
-            </a>
-          {% endif %}
-
-          <div class="product-title-size">
-          <a href="{{ item.url }}">{{ item.product.title }}</a>
-
-            {% unless item.product.has_only_default_variant %}
-              <p>{{ item.variant.title }}</p>
-            {% endunless %}
-
-            <span class="cart-one-size">One Size</span>
-          </div>
-
-          <a class="remove-button" href="/cart/change?line={{ forloop.index }}&amp;quantity=0">
-            <small>{{ 'cart.general.remove' | t }}</small>
-          </a>
-
-        {%comment%}
-          {% if item.original_line_price != item.line_price %}
-            <span class="visually-hidden">{{ 'cart.label.discounted_price' | t }}</span>
-            {{ item.price | money }}
-            <span class="visually-hidden">{{ 'cart.label.original_price' | t }}</span>
-            <s>{{ item.original_price | money }}</s>
-          {% else %}
-            {{ item.price | money }}
-          {% endif %}
-        {%endcomment%}
-
-          <input type="number"
-                name="updates[]"
-                id="updates_{{ item.key }}"
-                value="{{ item.quantity }}"
-                min="0"
-                aria-label="{{ 'cart.general.item_quantity' | t }}"
-                class="input-quantity-cart">
-
-          <span class="cart-product-price">
-          {{ item.line_price | money }}
-          </span>
 
       
-      </div>
-    {% endfor %}
-      {%comment%}
-      {% if settings.cart_notes_enable %}
-        <label for="CartSpecialInstructions">{{ 'cart.general.note' | t }}</label>
-        <textarea name="note" id="CartSpecialInstructions">{{ cart.note }}</textarea>
-      {% endif %}
-      {%endcomment%}
+       
+        <h1 class="title-cart">{{ 'cart.general.title' | t }}</h1>
 
-      <div class="subtotal-infos">
-        <div class="subtotal-text">
-          <p class="subtotal-text-info">{{ 'cart.general.subtotal' | t }}</p>
-          {% if cart.total_discounts > 0 %}
-            <p>{{ 'cart.general.savings' | t }} {{ cart.total_discounts | money }}</p>
+        <form action="/cart" method="post" novalidate>
+            {%-comment-%}
+            <thead class="small--hide">
+              <tr>
+                <th colspan="2">{{ 'cart.label.product' | t }}</th>
+                <th>{{ 'cart.label.price' | t }}</th>
+                <th>{{ 'cart.label.quantity' | t }}</th>
+                <th>{{ 'cart.label.total' | t }}</th>
+              </tr>
+            </thead>
+            {%-endcomment-%}
+
+              {% for item in cart.items %}
+
+              {% comment %}
+
+              Cart Item Template
+              =====================
+              The data-label attributes on <td> elements are mobile-friendly
+              helpers used for responsive-table labels
+              {% endcomment %}
+
+            <div class="product-infos">
+
+              {% if item.image != blank %}
+                <a class="product-picture-cart" href="{{ item.url | within: collections.all }}">
+                  {{ item | img_url: '300x' | img_tag: item.title }}
+                </a>
+              {% endif %}
+
+              <div class="product-title-size">
+              <a href="{{ item.url }}">{{ item.product.title }}</a>
+
+                {% unless item.product.has_only_default_variant %}
+                  <p>{{ item.variant.title }}</p>
+                {% endunless %}
+
+                <span class="cart-one-size">One Size</span>
+              </div>
+
+              <a class="remove-button" href="/cart/change?line={{ forloop.index }}&amp;quantity=0">
+                <small>{{ 'cart.general.remove' | t }}</small>
+              </a>
+
+            {%comment%}
+              {% if item.original_line_price != item.line_price %}
+                <span class="visually-hidden">{{ 'cart.label.discounted_price' | t }}</span>
+                {{ item.price | money }}
+                <span class="visually-hidden">{{ 'cart.label.original_price' | t }}</span>
+                <s>{{ item.original_price | money }}</s>
+              {% else %}
+                {{ item.price | money }}
+              {% endif %}
+            {%endcomment%}
+
+              <input type="number"
+                    name="updates[]"
+                    id="updates_{{ item.key }}"
+                    value="{{ item.quantity }}"
+                    min="1"
+                    aria-label="{{ 'cart.general.item_quantity' | t }}"
+                    class="input-quantity-cart">
+
+              <span class="cart-product-price">
+              {{ item.line_price | money }}
+              </span>
+
+          
+          </div>
+        {% endfor %}
+          {%comment%}
+          {% if settings.cart_notes_enable %}
+            <label for="CartSpecialInstructions">{{ 'cart.general.note' | t }}</label>
+            <textarea name="note" id="CartSpecialInstructions">{{ cart.note }}</textarea>
           {% endif %}
-          <p class="tax-label">{{ 'cart.general.shipping_at_checkout' | t }}</p>
-        </div>
-        <p class="subtotal-cart-price">{{ cart.total_price | money }}</p>
-        {%comment%}<input type="submit" name="update" value="{{ 'cart.general.update' | t }}">{%endcomment%}
-        </div>
-        <input type="submit" name="checkout" class="button button-checkout" value="{{ 'cart.general.checkout' | t }}">
-    </form>
+          {%endcomment%}
 
-    <span class="back-to-shop-button"><a>&#8592; Back to shop</a></span>
+          <div class="subtotal-infos">
+            <div class="subtotal-text">
+              <p class="subtotal-text-info">{{ 'cart.general.subtotal' | t }}</p>
+              {% if cart.total_discounts > 0 %}
+                <p>{{ 'cart.general.savings' | t }} {{ cart.total_discounts | money }}</p>
+              {% endif %}
+              <p class="tax-label">{{ 'cart.general.shipping_at_checkout' | t }}</p>
+            </div>
+            <p class="subtotal-cart-price">{{ cart.total_price | money }}</p>
+            {%comment%}<input type="submit" name="update" value="{{ 'cart.general.update' | t }}">{%endcomment%}
+            </div>
+            <input type="submit" name="checkout" class="button button-checkout" value="{{ 'cart.general.checkout' | t }}">
+        </form>
+
+        <span class="back-to-shop-button"><a href="/">&#8592; Back to shop</a></span>
+       
+    
+        {% else %}
+          <h1>{{ 'cart.general.title' | t }}</h1>
+
+          {% comment %}
+          Cart empty state
+          {% endcomment %}
+          <div class="supports-cookies">
+            <p>{{ 'cart.general.empty' | t }}</p>
+            <p>{{ 'cart.general.continue_browsing_html' | t }}</p>
+          </div>
+
+          {% comment %}
+          Cart no cookies state
+          ---------------------
+          Browser cookies are required to use the cart. If cookies aren't enabled in the
+          browser a message is displayed prompting the user to enable them.
+          {% endcomment %}
+          <div class="supports-no-cookies">
+            <p>{{ 'cart.general.cookies_required' | t }}</p>
+          </div>
+      {% endif %}
+       </div>
+        <div class="sidebar inner-right-sidebar"></div>
     </div>
-    <div class="sidebar inner-right-sidebar"></div>
-  </div>
   <div class="sidebar right-sidebar"></div>
 </div>
-  {% else %}
-    <h1>{{ 'cart.general.title' | t }}</h1>
-
-    {% comment %}
-    Cart empty state
-    {% endcomment %}
-    <div class="supports-cookies">
-      <p>{{ 'cart.general.empty' | t }}</p>
-      <p>{{ 'cart.general.continue_browsing_html' | t }}</p>
-    </div>
-
-    {% comment %}
-    Cart no cookies state
-    ---------------------
-    Browser cookies are required to use the cart. If cookies aren't enabled in the
-    browser a message is displayed prompting the user to enable them.
-    {% endcomment %}
-    <div class="supports-no-cookies">
-      <p>{{ 'cart.general.cookies_required' | t }}</p>
-    </div>
-{% endif %}
 
