--- a/src/assets/styles/sections/cart.scss
+++ b/src/assets/styles/sections/cart.scss
@@ -9,20 +9,20 @@
   display: grid;
   grid-template-columns: 20px 1fr 20px;
   max-width: 100%;
+
+  h1 {
+    font-family: "TotentanzSlanted";
+    color: white;
+    font-size: 48px;
+    font-weight: normal;
+    border-bottom: 3px solid white;
+    padding-bottom: 15px;
+    margin-bottom: 0;
+  }
 }
 
 .cart-inner-container {
   margin-top: 170px;
-}
-
-h1.title-cart {
-  font-family: "TotentanzSlanted";
-  color: white;
-  font-size: 48px;
-  font-weight: normal;
-  border-bottom: 3px solid white;
-  padding-bottom: 15px;
-  margin-bottom: 0;
 }
 
 .product-infos {
@@ -30,10 +30,12 @@ h1.title-cart {
   grid-template-columns: 1fr 1.5fr 1fr 1fr;
   grid-template-rows: 4fr 1fr;
   padding: 30px 0;
-}
 
-.product-infos:not(:last-of-type) {
   border-bottom: 1px solid white;
+}
+/* target last product to remove border bottom*/
+.product-infos:nth-last-child(3) {
+  border-bottom: none;
 }
 
 .product-infos * {
@@ -93,6 +95,8 @@ h1.title-cart {
   font-family: "TotentanzSlanted";
   display: grid;
   grid-template-columns: 1fr 1fr;
+  border-top: 3px solid white;
+  padding-top: 9px;
 
   .subtotal-text-info {
     margin-bottom: 0;
@@ -129,6 +133,11 @@ h1.title-cart {
   margin: 80px 0;
   text-transform: uppercase;
   font-size: 19px;
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
 }
 
 /* MEDIA QUERIES */
