--- a/src/sections/product.liquid
+++ b/src/sections/product.liquid
@@ -137,7 +137,9 @@
             </span>
         </button>
         <span class="black-point">•</span>
+        
       </form>
+      <span class="back-to-shop-button"><a href="/">&#8592; Back to shop</a></span>
   </div>
 
   {%- comment -%}
