--- a/src/assets/styles/sections/product.scss
+++ b/src/assets/styles/sections/product.scss
@@ -7,9 +7,8 @@
 .product-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  grid-template-rows: auto 1fr;
   grid-column-gap: 2px;
-  grid-row-gap: 2px;
+  grid-row-gap: 30px;
   max-width: 100%;
   margin-top: 12%;
   font-family: "TotentanzSlanted";
@@ -17,6 +16,7 @@
   h1 {
     font-family: "TotentanzSlanted";
     font-size: 48px;
+    margin-bottom: 25px;
   }
 }
 
@@ -26,6 +26,7 @@
 
   .price {
     font-size: 30px;
+    margin-bottom: 25px;
   }
 }
 
