--- a/src/assets/styles/sections/product.scss
+++ b/src/assets/styles/sections/product.scss
@@ -7,8 +7,9 @@
 .product-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-template-rows: 800px repeat(auto-fit, minmax(350px, max-content));
   grid-column-gap: 2px;
-  grid-row-gap: 30px;
+  grid-row-gap: 2px;
   max-width: 100%;
   margin-top: 12%;
   font-family: "TotentanzSlanted";
