--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -154,7 +154,7 @@
         {% else %}
           <li>
            <span class="nav-separator">|</span>
-            <a href="{{ link.url }}"> {{ link.title}} </a>
+            <a href="{{ link.url }}" {% if link.active %} class='active' {%endif %}> {{ link.title}} </a>
           </li>
         {% endif %}
       {% endfor %}
