--- a/src/assets/styles/sections/header.scss
+++ b/src/assets/styles/sections/header.scss
@@ -50,6 +50,10 @@ nav.main-nav {
     font-weight: lighter;
     font-size: 26px;
   }
+
+  .mobile-menu-icon {
+    display: none;
+  }
 }
 
 nav.filter {
@@ -103,4 +107,66 @@ nav.filter {
   text-decoration: none;
   padding: 5px 9px;
   border-radius: 93%;
+}
+
+/* MEDIA QUERIES */
+@media only screen and (max-width: 768px) {
+  nav.main-nav {
+    width: 100%;
+    height: 50px;
+    transform: initial;
+    top: initial;
+    left: initial;
+  }
+
+  .main-nav li {
+    display: none;
+  }
+
+  .main-nav li.mobile-menu-icon {
+    float: right;
+    display: block;
+    left: 16px;
+    position: absolute;
+  }
+
+  .main-nav.responsive {
+    position: relative;
+  }
+  .main-nav.responsive a.mobile-menu-icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .main-nav.responsive li {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .logo-image {
+    top: 25px;
+    left: calc(50% - 77px);
+    width: 150px;
+  }
+
+  .cart {
+    top: 8px;
+    width: 80px;
+  }
+
+  .cart-item-count {
+    left: 38%;
+    top: 11%;
+    padding: 1px 5px;
+    border-radius: 93%;
+  }
+
+  #shopify-section-header {
+    height: 110px;
+    position: absolute;
+    background: rgba(255, 255, 255, 0.6);
+    z-index: 999;
+    width: 100%;
+  }
 }
