--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -160,7 +160,7 @@
       {% endfor %}
       {% comment %} Mobile nav icon {% endcomment %}
       <li class="mobile-menu-icon">
-        <a href="javascript:void(0);"  onclick="myFunction()"><i class="fa fa-bars">Menu</i></a>
+        <a href="javascript:void(0);"  onclick="myFunction()"><i class="fa fa-bars">{% include 'icon-hamburger' %}</i></a>
       </li>
     </ul>
   </nav>
