--- a/src/assets/styles/sections/header.scss
+++ b/src/assets/styles/sections/header.scss
@@ -117,6 +117,10 @@ nav.filter {
     transform: initial;
     top: initial;
     left: initial;
+
+    ul {
+      display: grid;
+    }
   }
 
   .main-nav li {
@@ -146,8 +150,8 @@ nav.filter {
 
   .logo-image {
     top: 25px;
-    left: calc(50% - 77px);
-    width: 150px;
+    left: calc(50% - 57px);
+    width: 110px;
   }
 
   .cart {
@@ -163,8 +167,8 @@ nav.filter {
   }
 
   #shopify-section-header {
-    height: 110px;
-    position: absolute;
+    height: 90px;
+    position: fixed;
     background: rgba(255, 255, 255, 0.6);
     z-index: 999;
     width: 100%;
