--- a/src/assets/styles/sections/images-duo.scss
+++ b/src/assets/styles/sections/images-duo.scss
@@ -1,12 +1,12 @@
 .images-duo-wrapper {
   display: grid;
-  grid-template-columns: 20px 1fr 20px;
+  grid-template-columns: 117px 1fr 117px;
   max-width: 100%;
 }
 
 .images-duo {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-column-gap: 2px;
   grid-row-gap: 2px;
   max-width: 100%;
@@ -14,8 +14,8 @@
 }
 
 /* MEDIA QUERIES */
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
   .images-duo-wrapper {
-    grid-template-columns: 117px 1fr 117px;
+    grid-template-columns: 1fr;
   }
 }
