--- a/src/assets/styles/sections/images-duo.scss
+++ b/src/assets/styles/sections/images-duo.scss
@@ -17,5 +17,6 @@
 @media only screen and (max-width: 768px) {
   .images-duo-wrapper {
     grid-template-columns: 1fr;
+    margin-top: 90px;
   }
 }
