--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -47,7 +47,7 @@
       moneyFormat: {{ shop.money_format | json }}
     };
 
-    function myFunction() {
+    function toggleNav() {
       const x = document.getElementById("main-nav");
       if (x.className === "main-nav") {
         x.className += " responsive";
