--- a/src/assets/styles/sections/cart.scss
+++ b/src/assets/styles/sections/cart.scss
@@ -1,13 +1,13 @@
 .cart-wrapper {
   display: grid;
-  grid-template-columns: 20px 1fr 20px;
+  grid-template-columns: 117px 1fr 117px;
   max-width: 100%;
 }
 
 .cart-container {
   background: #ffa2df;
   display: grid;
-  grid-template-columns: 20px 1fr 20px;
+  grid-template-columns: 114px 1fr 114px;
   max-width: 100%;
 
   h1 {
@@ -18,6 +18,7 @@
     border-bottom: 3px solid white;
     padding-bottom: 15px;
     margin-bottom: 0;
+    text-transform: uppercase;
   }
 }
 
@@ -141,12 +142,87 @@
 }
 
 /* MEDIA QUERIES */
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
   .cart-wrapper {
-    grid-template-columns: 117px 1fr 117px;
+    grid-template-columns: 1fr;
+    margin-top: 90px;
   }
 
   .cart-container {
-    grid-template-columns: 114px 1fr 114px;
+    grid-template-columns: 1fr;
+  }
+
+  .cart-inner-container {
+    margin-top: 30px;
+
+    h1 {
+      width: 80%;
+      margin: 0 auto;
+      font-size: 26px;
+      padding-bottom: 5px;
+    }
+  }
+
+  .product-infos {
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: repeat(auto-fit, minmax(20px, 0.98fr));
+    max-width: 90%;
+    margin: 0 auto;
+
+    .product-title-size {
+      grid-column-start: 2;
+      grid-column-end: 4;
+      padding-top: 7px;
+      padding-left: 10px;
+
+      a {
+        font-size: 20px;
+      }
+    }
+
+    .cart-one-size {
+      padding-top: 10px;
+      font-size: 12px;
+    }
+
+    .product-picture-cart {
+      grid-row-start: 1;
+      grid-row-end: 4;
+    }
+
+    .cart-product-price {
+      grid-row: 3;
+      grid-column: 3;
+    }
+  }
+
+  .input-quantity-cart  {
+    grid-row: 3;
+    grid-column: 2;
+  }
+
+  .input-quantity-cart {
+    grid-row: 3;
+    grid-column: 2;
+    padding: 5px;
+    width: 80%;
+    justify-self: center;
+  }
+
+  .remove-button {
+    padding: 30px 9px;
+    font-size: 16px;
+  }
+
+  .subtotal-infos {
+    padding: 9px 20px 0;
+    max-width: 90%;
+    margin: 0 auto;
+  }
+
+  .button-checkout {
+    max-width: 90%;
+    margin: 0 auto;
+    display: block;
   }
 }
