Adjust cart icon size and position on mobile

--- a/src/assets/styles/sections/header.scss
+++ b/src/assets/styles/sections/header.scss
@@ -179,8 +179,9 @@ nav.filter {
   }
 
   .cart {
-    top: 8px;
-    width: 60px;
+    top: 18px;
+    width: 50px;
+    right: 16px;
   }
 
   .cart-item-count {
