update empty cart template

--- a/src/assets/styles/sections/cart.scss
+++ b/src/assets/styles/sections/cart.scss
@@ -153,10 +153,10 @@
   }
 
   .cart-inner-container {
-    margin-top: 30px;
+    width: 80%;
+    margin: 30px auto;
 
     h1 {
-      width: 80%;
       margin: 0 auto;
       font-size: 26px;
       padding-bottom: 5px;
