--- a/src/assets/styles/sections/footer.scss
+++ b/src/assets/styles/sections/footer.scss
@@ -128,6 +128,14 @@
         padding-left: 10px;
         font-size: 13px;
       }
+
+      li:first-child {
+        border-left: 1px solid black;
+      }
+
+      li:nth-child(2) {
+        border-right: 1px solid black;
+      }
     }
   }
 
