--- a/src/templates/page.liquid
+++ b/src/templates/page.liquid
@@ -1,5 +1,11 @@
-<h1>{{ page.title }}</h1>
+{%comment%}<h1>{{ page.title }}</h1>{%endcomment%}
 
-<div class="rte">
-  {{ page.content }}
+<div class="featured-collection-wrapper "> 
+  <div class="sidebar left-sidebar"></div>
+    <div class="page-container">
+      <div class="rte">
+        {{ page.content }}
+      </div>
+    </div>
+    <div class="sidebar right-sidebar"></div>
 </div>
