Password page minimal setup

--- a/src/templates/password.liquid
+++ b/src/templates/password.liquid
@@ -5,6 +5,7 @@
 
 {% layout 'password' %}
 
+{% comment %}
 <h2>{{ 'general.password_page.opening_soon' | t }}</h2>
 
 {% unless shop.password_message == blank %}
@@ -44,8 +45,11 @@
   <p>{{ 'general.password_page.spread_the_word' | t }}</p>
   {% include 'social-sharing' %}
 {% endif %}
+{% endcomment %}
 
 <a href="#Login">
   {% include 'icon-lock' %}
   {{ 'general.password_page.password_link' | t }} &rarr;
 </a>
+
+
