--- a/src/layout/password.liquid
+++ b/src/layout/password.liquid
@@ -33,17 +33,34 @@
   </header>
 
   <main role="main" id="MainContent">
-    {{ content_for_layout }}
+    <div id="Login" class="login">
+    <h4>{{ 'general.password_page.login_form_heading' | t }}</h4>
+    {% form 'storefront_password' %}
+      {{ form.errors | default_errors }}
+      {%comment%}<label for="password">{{ 'general.password_page.login_form_password_label' | t }}</label>{%endcomment%}
+      <input type="password"
+        name="password"
+        id="Password"
+        placeholder="{{ 'general.password_page.login_form_password_placeholder' | t }}">
+      <button type="submit" name="commit">
+        {{ 'general.password_page.login_form_submit' | t }}
+      </button>
+    {% endform %}
+    {%comment%}<p>{{ 'general.password_page.admin_link_html' | t }}</p>{%endcomment%}
+  </div>
+    {%comment%}{{ content_for_layout }}{%endcomment%}
   </main>
 
+{%comment%}{
   <footer>
-    {% capture shopify_link %}
+    % capture shopify_link %}
       <a href="//www.shopify.com" target="_blank" title="Create your own online store with Shopify">
         {% include 'icon-shopify-logo' %}
         <span class="icon-fallback-text">Shopify</span>
       </a>
     {% endcapture %}
     {{ 'general.password_page.powered_by_shopify_html' | t: shopify: shopify_link }}
+
   </footer>
 
   <div id="Login">
@@ -61,5 +78,17 @@
     {% endform %}
     <p>{{ 'general.password_page.admin_link_html' | t }}</p>
   </div>
+  {%endcomment%}
+
+  <style>
+.template-password {
+    text-align: center;
+    padding-top: 10%;
+}
+
+.login {
+  padding-top: 1%
+}
+</style>
 </body>
 </html>
