--- a/src/assets/styles/sections/header.scss
+++ b/src/assets/styles/sections/header.scss
@@ -11,16 +11,15 @@ header {
 
 nav.main-nav {
   text-align: center;
-  width: 715px;
+  width: 695px;
   height: 80px;
   display: block;
   transform: rotate(-90deg);
   position: fixed;
   left: -302px;
-  /*top: 440px;*/
-  top: 310px;
+  top: 222px;
   font-family: "TotentanzBackslanted";
-  font-size: 24px;
+  font-size: 1.2em;
 
   ul {
     display: flex;
@@ -45,10 +44,15 @@ nav.main-nav {
     color: #ffa2df;
   }
 
+  a.active {
+    font-family: "TotentanzSlanted";
+  }
+
   span.nav-separator {
     font-family: sans-serif;
     font-weight: lighter;
     font-size: 26px;
+    margin-left: 10px;
   }
 
   .mobile-menu-icon {
@@ -84,29 +88,30 @@ nav.filter {
 
 .logo-image {
   position: fixed;
-  top: 76px;
+  top: 44px;
   left: calc(50% - 100px);
   z-index: 999;
 }
 
 .cart {
   position: fixed;
-  right: 6px;
-  max-width: 100px;
-  width: 100px;
-  top: 76px;
+  right: 0px;
+  max-width: 75px;
+  width: 75px;
+  top: 44px;
 }
 
 .cart-item-count {
   position: absolute;
-  left: 36%;
-  top: 10%;
+  left: 34%;
+  top: 8%;
   color: white;
   background: black;
   font-family: "InterstateBold";
   text-decoration: none;
-  padding: 5px 9px;
-  border-radius: 93%;
+  padding: 5px 8px;
+  border-radius: 100%;
+  font-size: 0.7em;
 }
 
 .cart-nav {
