--- a/src/sections/featured-collection.liquid
+++ b/src/sections/featured-collection.liquid
@@ -35,18 +35,18 @@
         <span class="price-list">
           {% if product.compare_at_price > product.price %}
             {% if product.price_varies %}
-              {%- assign sale_price = product.price | money_with_currency -%}
+              {%- assign sale_price = product.price | money -%}
               {{ 'products.product.on_sale_from_html' | t: price: sale_price }}
             {% else %}
               {{ 'products.product.on_sale' | t }}
-              {{ product.price | money_with_currency }}
+              {{ product.price | money }}
             {% endif %}
           {% else %}
             {% if product.price_varies %}
-              {%- assign price = product.price | money_with_currency -%}
+              {%- assign price = product.price | money -%}
               {{ 'products.product.from_text_html' | t: price: price }}
             {% else %}
-              {{ product.price | money_with_currency }}
+              {{ product.price | money }}
             {% endif %}
           {% endif %}
         </span>
