--- a/src/assets/styles/sections/footer.scss
+++ b/src/assets/styles/sections/footer.scss
@@ -59,7 +59,7 @@
       text-decoration: none;
       text-transform: uppercase;
       font-family: "TotentanzBackslanted";
-      font-size: 16px;
+      font-size: 0.9em;
     }
   }
 }
